test/sema/unknown-member-access-base.delta.output
unknown-member-access-base.delta:5:15: error: unknown identifier 'foo'
    var bar = foo.bar;
              ^
