test/sema/unknown-member-access-base.delta
// RUN: %check_errors %not %delta -typecheck %s

void main() {
    // CHECK: [[@LINE+1]]:15: error: unknown identifier 'foo'
    var bar = foo.bar;
}
